--- a/public/tablet.html
+++ b/public/tablet.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>인터랙티브 아트 디스플레이</title>
+    <title>목마른 아보카도 Thirsty Avocado</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
+      /* ... (이전 답변의 스타일 코드는 생략) ... */
       body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          sans-serif;
         margin: 0;
         background-color: #000;
+        color: #fff;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
         overflow: hidden;
       }
-      #message-display {
-        font-family: sans-serif;
-        font-size: 10vw;
-        color: white;
-        opacity: 0; /* 처음에는 투명하게 */
-        transition: opacity 1s; /* 부드럽게 나타나도록 애니메이션 설정 */
+      #chat-container {
+        width: 90%;
+        max-width: 800px;
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        overflow-y: auto;
+        padding: 20px;
+        box-sizing: border-box;
+      }
+      .chat-bubble {
+        padding: 15px 25px;
+        border-radius: 25px;
+        max-width: 75%;
+        line-height: 1.5;
+        animation: fadeIn 0.5s ease;
+        white-space: pre-wrap;
+      }
+      .user-bubble {
+        background-color: #333;
+        align-self: flex-start;
+      }
+      .gpt-bubble {
+        background-color: #007aff;
+        align-self: flex-end;
+      }
+      @keyframes fadeIn {
+        /* ... */
       }
     </style>
   </head>
   <body>
+    <div id="chat-container"></div>
+
     <canvas id="canvas3d"></canvas>
     <script
       async
@@ -36,6 +65,7 @@
       }
     </script>
     <script type="module" src="./tablet.js"></script>
+
     <div id="message-display"></div>
 
     <!-- socket.io 라이브러리 불러오기 -->
@@ -43,20 +73,44 @@
     <script>
       // 서버에 접속합니다.
       const socket = io();
-      const messageDisplay = document.getElementById("message-display");
+      const chatContainer = document.getElementById("chat-container");
 
-      // 서버로부터 'show-message' 라는 신호를 받았을 때
-      socket.on("show-message", (msg) => {
-        // div의 내용을 서버가 보내준 메시지로 바꾸고
-        messageDisplay.textContent = msg;
-        // 투명도를 1로 만들어 화면에 보이게 합니다.
-        messageDisplay.style.opacity = 1;
+      /**
+       * 새 말풍선을 생성하여 화면에 추가하는 함수
+       * @param {string} text - 말풍선에 들어갈 텍스트
+       * @param {string} type - 'user' 또는 'gpt' (스타일을 다르게 하기 위함)
+       */
+      function createBubble(text, type) {
+        const bubble = document.createElement("div");
+        bubble.classList.add("chat-bubble");
+        bubble.classList.add(type === "user" ? "user-bubble" : "gpt-bubble");
+        bubble.textContent = text;
+        chatContainer.appendChild(bubble);
+        // 새 메시지가 오면 항상 맨 아래로 스크롤
+        chatContainer.scrollTop = chatContainer.scrollHeight;
+      }
 
-        // 5초 후에 다시 투명하게 만듭니다.
-        setTimeout(() => {
-          messageDisplay.style.opacity = 0;
-        }, 5000);
+      // 서버로부터 'user-question'(사용자 질문) 신호를 받으면
+      socket.on("user-question", (question) => {
+        createBubble(question, "user");
       });
+
+      // 서버로부터 'gpt-answer'(AI 답변) 신호를 받으면
+      socket.on("gpt-answer", (answer) => {
+        createBubble(answer, "gpt");
+      });
+      // // 서버로부터 'show-message' 라는 신호를 받았을 때
+      // socket.on("show-message", (msg) => {
+      //   // div의 내용을 서버가 보내준 메시지로 바꾸고
+      //   messageDisplay.textContent = msg;
+      //   // 투명도를 1로 만들어 화면에 보이게 합니다.
+      //   messageDisplay.style.opacity = 1;
+
+      //   // 5초 후에 다시 투명하게 만듭니다.
+      //   setTimeout(() => {
+      //     messageDisplay.style.opacity = 0;
+      //   }, 5000);
+      // });
     </script>
   </body>
 </html>
