--- a/public/tablet.html
+++ b/public/tablet.html
@@ -1,58 +1,96 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>목마른 아보카도 Thirsty Avocado</title>
+    <title>목마른 아보카도 Thirsty Avocado: 태블릿</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-      /* ... (이전 답변의 스타일 코드는 생략) ... */
+      /* 스타일(CSS) 부분은 수정할 필요 없이 그대로 사용합니다. */
+      @font-face {
+        font-family: "Galmuri11Condensed";
+        src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/2506-1@1.0/Galmuri11-Condensed.woff2")
+          format("woff2");
+        font-weight: normal;
+        font-display: swap;
+      }
       body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          sans-serif;
+        font-family: "Galmuri11Condensed", sans-serif;
         margin: 0;
         background-color: #000;
-        color: #fff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
         overflow: hidden;
       }
+      #canvas3d {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        z-index: 1;
+        outline: none;
+      }
       #chat-container {
-        width: 90%;
-        max-width: 800px;
-        height: 90%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
         display: flex;
         flex-direction: column;
+        justify-content: flex-end;
         gap: 20px;
-        overflow-y: auto;
-        padding: 20px;
+        padding: 40px;
         box-sizing: border-box;
+        overflow-y: auto;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+      }
+      #chat-container::-webkit-scrollbar {
+        display: none;
       }
       .chat-bubble {
         padding: 15px 25px;
         border-radius: 25px;
-        max-width: 75%;
+        max-width: 50%;
         line-height: 1.5;
         animation: fadeIn 0.5s ease;
         white-space: pre-wrap;
+        color: #fff;
       }
       .user-bubble {
-        background-color: #333;
+        background-color: rgba(50, 50, 50, 0.8);
         align-self: flex-start;
+        border-bottom-left-radius: 5px;
       }
       .gpt-bubble {
-        background-color: #007aff;
+        background-color: rgba(0, 122, 255, 0.8);
         align-self: flex-end;
+        border-bottom-right-radius: 5px;
       }
       @keyframes fadeIn {
-        /* ... */
+        from {
+          opacity: 0;
+          transform: translateY(15px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
       }
     </style>
   </head>
   <body>
+    <!-- [수정] 캔버스가 바로 body의 자식으로 오도록 구조 단순화 -->
+    <canvas id="canvas3d"></canvas>
+
+    <!-- 말풍선 컨테이너는 그대로 유지 -->
     <div id="chat-container"></div>
 
-    <canvas id="canvas3d"></canvas>
+    <!-- [수정] 스크립트 로딩 순서를 명확하게 정리하고, 중복 코드 제거 -->
+
+    <!-- 1. Socket.IO 라이브러리 (tablet.js가 사용해야 하므로 먼저 로드) -->
+    <script src="/socket.io/socket.io.js"></script>
+
+    <!-- 2. Spline 런타임을 위한 importmap과 shims (순서 중요) -->
     <script
       async
       src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"
@@ -64,53 +102,8 @@
         }
       }
     </script>
+
+    <!-- 3. 우리의 메인 로직 파일인 tablet.js를 마지막에 실행 -->
     <script type="module" src="./tablet.js"></script>
-
-    <div id="message-display"></div>
-
-    <!-- socket.io 라이브러리 불러오기 -->
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      // 서버에 접속합니다.
-      const socket = io();
-      const chatContainer = document.getElementById("chat-container");
-
-      /**
-       * 새 말풍선을 생성하여 화면에 추가하는 함수
-       * @param {string} text - 말풍선에 들어갈 텍스트
-       * @param {string} type - 'user' 또는 'gpt' (스타일을 다르게 하기 위함)
-       */
-      function createBubble(text, type) {
-        const bubble = document.createElement("div");
-        bubble.classList.add("chat-bubble");
-        bubble.classList.add(type === "user" ? "user-bubble" : "gpt-bubble");
-        bubble.textContent = text;
-        chatContainer.appendChild(bubble);
-        // 새 메시지가 오면 항상 맨 아래로 스크롤
-        chatContainer.scrollTop = chatContainer.scrollHeight;
-      }
-
-      // 서버로부터 'user-question'(사용자 질문) 신호를 받으면
-      socket.on("user-question", (question) => {
-        createBubble(question, "user");
-      });
-
-      // 서버로부터 'gpt-answer'(AI 답변) 신호를 받으면
-      socket.on("gpt-answer", (answer) => {
-        createBubble(answer, "gpt");
-      });
-      // // 서버로부터 'show-message' 라는 신호를 받았을 때
-      // socket.on("show-message", (msg) => {
-      //   // div의 내용을 서버가 보내준 메시지로 바꾸고
-      //   messageDisplay.textContent = msg;
-      //   // 투명도를 1로 만들어 화면에 보이게 합니다.
-      //   messageDisplay.style.opacity = 1;
-
-      //   // 5초 후에 다시 투명하게 만듭니다.
-      //   setTimeout(() => {
-      //     messageDisplay.style.opacity = 0;
-      //   }, 5000);
-      // });
-    </script>
   </body>
 </html>
