--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <title>목마른 아보카도: 모바일</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
     <style>
       @font-face {
         font-family: "Galmuri11Condensed";
@@ -12,129 +15,261 @@
         font-display: swap;
       }
       html {
+        height: 100%;
+      }
+      body {
         font-family: "Galmuri11Condensed", sans-serif;
+        margin: 0;
+        background-color: #1a1a1a; /* Spline 로딩 전 기본 배경색 */
+        color: #f3ffc7;
+        overflow: hidden;
       }
 
-      body {
-        /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          "Helvetica Neue", Arial, sans-serif; */
-        font-family: "Galmuri11Condensed", sans-serif;
+      #canvas3d {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        z-index: 1;
+      }
+
+      .container {
+        position: relative;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        padding: 40px 20px 25px;
+        box-sizing: border-box;
+      }
+      .fade-in {
+        animation: fadeIn 1s ease-in-out;
+      }
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      /* [추가] 로고 이미지 스타일 */
+      #logo-display {
+        flex-grow: 1; /* 남는 공간 차지 */
+        display: flex;
         justify-content: center;
         align-items: center;
-        height: 100vh;
-        margin: 0;
-        background-color: #f0f2f5;
-        color: #333;
-      }
-      .container {
-        width: 90%;
-        max-width: 500px;
-        text-align: center;
-      }
-      textarea {
         width: 100%;
-        padding: 15px;
-        font-size: 16px;
-        border-radius: 12px;
-        border: 1px solid #ccc;
-        margin-bottom: 1rem;
-        box-sizing: border-box;
-        min-height: 80px;
       }
-      button {
-        padding: 15px 20px;
-        font-size: 18px;
-        font-weight: bold;
+      #logo-display img {
+        max-width: 80%; /* 로고 최대 크기 */
+        max-height: 50vh; /* 화면 높이의 50%를 넘지 않도록 */
+        object-fit: contain; /* 비율 유지하며 컨테이너에 맞춤 */
+      }
+
+      /* 질문 텍스트 영역 (로고가 아닐 때만 사용) */
+      #question-area {
+        flex-grow: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+      }
+      #question-text {
+        font-size: 1.8rem;
+        line-height: 1.6;
+        text-align: left;
+        word-break: keep-all;
+        max-width: 400px;
+      }
+
+      /* 하단 버튼 영역 */
+      #choice-area {
+        width: 100%;
+        max-width: 400px;
+      }
+      #choice-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 1rem;
+      }
+      .choice-button {
+        background-color: rgba(255, 255, 255, 0.2);
+        color: #fff;
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        border-radius: 50px;
+        padding: 20px;
+        font-size: 1.2rem;
         cursor: pointer;
-        border: none;
-        border-radius: 12px;
-        color: white;
+        transition: background-color 0.2s, transform 0.2s;
+        font-family: inherit;
+        font-weight: bold;
+        backdrop-filter: blur(5px);
       }
-      #ask-button {
-        background-color: #007aff;
+      .choice-button:hover {
+        background-color: rgba(255, 255, 255, 0.3);
       }
-      #pump-button {
-        background-color: #34c759;
-        margin-top: 1rem;
+      .choice-button:active {
+        transform: scale(0.98);
+      }
+
+      /* 최종 메시지 스타일 */
+      #message-container p {
+        font-size: 1.8rem;
+        line-height: 1.6;
+        text-align: center;
       }
     </style>
   </head>
   <body>
-    <div class="container">
-      <!-- 1. 기존 인터랙션 UI를 이 div로 감쌉니다 -->
-      <div id="interaction-container">
-        <h1>무엇이든 물어보세요</h1>
-        <textarea
-          id="question-input"
-          placeholder="여기에 궁금한 점을 입력하세요..."
-        ></textarea>
-        <button id="ask-button">질문하기 (태블릿)</button>
-        <button id="pump-button">물 채우기 (유리병)</button>
+    <!-- 1. 배경 역할을 할 Spline 캔버스 --><canvas id="canvas3d"></canvas>
+
+    <!-- 2. 내용이 표시될 컨테이너 (캔버스 위) -->
+    <div class="container fade-in">
+      <!-- 로고 표시 영역 (첫 페이지에만 사용) -->
+      <div id="logo-display">
+        <img src="Logo Type.svg" alt="Thirsty Avocado Logo" />
+      </div>
+
+      <!-- 질문 텍스트 영역 (로고 이후 질문에 사용) -->
+      <div id="question-area" style="display: none">
+        <!-- 초기에는 숨김 -->
+        <h1 id="question-text"></h1>
+      </div>
+
+      <!-- 최종 메시지를 보여줄 컨테이너 -->
+      <div id="message-container"></div>
+
+      <!-- 하단 버튼 영역 -->
+      <div id="choice-area">
+        <div id="choice-container"></div>
       </div>
     </div>
 
-    <!-- 2. 버튼 클릭 후 보여줄 메시지 영역 -->
-    <div id="message-container">
-      <p id="result-text"></p>
-    </div>
-
-    <!-- socket.io 라이브러리 불러오기 -->
+    <!-- Socket.IO 라이브러리 -->
     <script src="/socket.io/socket.io.js"></script>
+
+    <!-- Spline 런타임 라이브러리 -->
+    <script
+      async
+      src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"
+    ></script>
+    <script type="importmap">
+      {
+        "imports": {
+          "@splinetool/runtime": "https://unpkg.com/@splinetool/runtime@1.10.77/build/runtime.js"
+        }
+      }
+    </script>
+    <script type="module">
+      import { Application } from "@splinetool/runtime";
+      const canvas = document.getElementById("canvas3d");
+      const app = new Application(canvas);
+      app.load("https://prod.spline.design/x7tijJe3V0-ecl0S/scene.splinecode");
+    </script>
+
+    <!-- 스토리 진행 로직 -->
     <script>
-      // 서버에 접속합니다.
       const socket = io();
-      // HTML 요소들을 미리 찾아둡니다.
-      const interactionContainer = document.getElementById(
-        "interaction-container"
-      );
+      const logoDisplay = document.getElementById("logo-display"); // 로고 영역 추가
+      const questionArea = document.getElementById("question-area");
+      const questionTextElement = document.getElementById("question-text");
+      const choiceArea = document.getElementById("choice-area");
+      const choiceContainer = document.getElementById("choice-container");
       const messageContainer = document.getElementById("message-container");
-      const resultText = document.getElementById("result-text");
 
-      const askButton = document.getElementById("ask-button");
-      const pumpButton = document.getElementById("pump-button");
-      const questionInput = document.getElementById("question-input");
+      const story = [
+        {
+          // 0번 스토리: 로고와 시작하기 버튼
+          logo: true, // 로고를 표시해야 함을 나타내는 플래그
+          choices: [{ text: "시작하기", next: 1 }],
+        },
+        {
+          // 1번 스토리: 첫 번째 질문
+          question: "안녕하세요.\n목이 마른 아보카도를 찾아오셨군요.",
+          choices: [{ text: "네, 안녕하세요.", next: 2 }],
+        },
+        {
+          // 2번 스토리: 두 번째 질문
+          question: "물을 주러 온 친절한 당신을, 뭐라고 부르면 될까요?",
+          choices: [{ text: "다음으로", next: 3 }], // 다음 질문으로 이동
+        },
+        {
+          // 3번 스토리: 이름 확인 후 행동 선택
+          question: "반가워요. 아보카도만큼이나 멋진 이름이네요.",
+          choices: [
+            {
+              text: "고마워요. (아보카도에게 말을 건다)",
+              action: "ask",
+              value: "안녕, 넌 누구니? 왜 그렇게 슬퍼보여?",
+            },
+            { text: "고마워요. (말없이 물을 준다)", action: "pump" },
+          ],
+        },
+      ];
 
-      /**
-       * UI를 인터랙션 화면에서 메시지 화면으로 전환하는 함수
-       * @param {string} text - 화면에 보여줄 메시지
-       */
-      function showCompletionMessage(text) {
-        // 인터랙션 UI를 부드럽게 숨깁니다.
-        interactionContainer.style.display = "none";
+      let currentStoryIndex = 0;
 
-        // 전달받은 텍스트로 메시지를 설정하고 화면에 보여줍니다.
-        resultText.textContent = text;
-        messageContainer.style.display = "block";
+      function renderStory(index) {
+        const current = story[index];
+
+        // 로고 표시 여부에 따라 UI 전환
+        if (current.logo) {
+          logoDisplay.style.display = "flex"; // 로고 영역 보이기
+          questionArea.style.display = "none"; // 질문 영역 숨기기
+          questionTextElement.textContent = ""; // 질문 텍스트 초기화
+        } else {
+          logoDisplay.style.display = "none"; // 로고 영역 숨기기
+          questionArea.style.display = "flex"; // 질문 영역 보이기
+          questionTextElement.textContent = current.question;
+        }
+
+        choiceContainer.innerHTML = "";
+        current.choices.forEach((choice) => {
+          const button = document.createElement("button");
+          button.textContent = choice.text;
+          button.classList.add("choice-button");
+          button.onclick = () => handleChoice(choice);
+          choiceContainer.appendChild(button);
+        });
+        messageContainer.innerHTML = ""; // 메시지 컨테이너 초기화
       }
 
-      // '질문하기' 버튼을 눌렀을 때
-      askButton.addEventListener("click", () => {
-        const question = questionInput.value;
-        if (question.trim() === "") {
-          alert("질문을 입력해주세요.");
-          return;
+      function handleChoice(choice) {
+        if (choice.next !== undefined) {
+          currentStoryIndex = choice.next;
+          renderStory(currentStoryIndex);
+        } else if (choice.action === "ask") {
+          socket.emit("ask-question", choice.value);
+          showCompletionMessage(
+            "당신은 아보카도에게 말을 걸었습니다.\n전시장의 태블릿을 확인하세요."
+          );
+        } else if (choice.action === "pump") {
+          socket.emit("pump-water");
+          showCompletionMessage(
+            "당신은 아보카도에게 물을 주기로 결정했습니다.\n전시장의 유리병을 확인하세요."
+          );
         }
-        // 1. 서버로 질문을 전송합니다.
-        socket.emit("ask-question", question);
+      }
 
-        // 2. 화면을 안내 메시지로 변경합니다.
-        showCompletionMessage(
-          "당신은 가상의 아보카도에게 물을 주기로 결정했습니다. 왼쪽에서 무슨일이 일어나는지 확인하세요."
-        );
-      });
+      function showCompletionMessage(text) {
+        logoDisplay.style.display = "none"; // 로고 숨김
+        questionArea.style.display = "none"; // 질문 숨김
+        choiceArea.style.display = "none"; // 버튼 숨김
 
-      // '물 채우기' 버튼을 눌렀을 때
-      pumpButton.addEventListener("click", () => {
-        // 1. 서버로 물 채우기 신호를 보냅니다.
-        socket.emit("pump-water");
+        const p = document.createElement("p");
+        p.textContent = text;
+        messageContainer.appendChild(p);
+      }
 
-        // 2. 화면을 안내 메시지로 변경합니다. (일관된 경험을 위해 동일한 메시지 사용)
-        showCompletionMessage(
-          "당신은 가상의 아보카도에게 물을 주기로 결정했습니다. 왼쪽에서 무슨일이 일어나는지 확인하세요."
-        );
-      });
+      // 페이지 로드 시 첫 번째 스토리(로고)를 보여주며 시작
+      renderStory(currentStoryIndex);
     </script>
   </body>
 </html>
